# blazefl

./: README.md  pyproject.toml
benchmarks/: README.md  main.py  pyproject.toml
benchmarks/blazefl-case/: Makefile  README.md  main.py  pyproject.toml  pyrightconfig.json
benchmarks/flower-case/: Makefile  README.md  config.toml.tmpl  pyproject.toml
benchmarks/flower-case/example/: client.py  models.py  server.py  task.py
docs/source/: conf.py  contribute.rst
examples/experimental-freethreaded/: main.py  pyproject.toml
examples/quickstart-fedavg/: README.md  config.py  data.pkl  main.py  output.pstats  pyproject.toml
examples/quickstart-fedavg/dataset/: dataset.py  functional.py  transforms.py
examples/quickstart-fedavg/models/: __init__.py
examples/step-by-step-dsfl/: README.md  main.py  pyproject.toml
examples/step-by-step-dsfl/algorithm/: __init__.py  dsfl.py
examples/step-by-step-dsfl/dataset/: dataset.py
examples/step-by-step-dsfl/models/: selector.py
src/blazefl/contrib/: __init__.py  fedavg.py
src/blazefl/core/: __init__.py  __init__.pyi  client_trainer.py  client_trainer.pyi  partitioned_dataset.py  partitioned_dataset.pyi  utils.py  utils.pyi
src/blazefl/reproducibility/: snapshot.py  snapshot.pyi
src/blazefl/utils/: __init__.py  __init__.pyi  seed.py  seed.pyi
tests/test_contrib/: test_fedavg.py
tests/test_core/: test_client_trainer.py
